dolfinx/v0.4.1/python/_sources/generated/dolfinx.cpp.fem.rst.txt
dolfinx.cpp.fem
===============

.. automodule:: dolfinx.cpp.fem

   
   
   

   
   
   .. rubric:: Functions

   .. autosummary::
   
      apply_lifting
      assemble_matrix
      assemble_scalar
      assemble_vector
      build_dofmap
      create_dofmap
      create_element_dof_layout
      create_expression_complex128
      create_expression_complex64
      create_expression_float32
      create_expression_float64
      create_form_complex128
      create_form_complex64
      create_form_float32
      create_form_float64
      create_sparsity_pattern
      insert_diagonal
      locate_dofs_geometrical
      locate_dofs_topological
      pack_coefficients
      pack_constants
      set_bc
      transpose_dofmap
   
   

   
   
   .. rubric:: Classes

   .. autosummary::
   
      Constant_complex128
      Constant_complex64
      Constant_float32
      Constant_float64
      CoordinateElement
      DirichletBC_complex128
      DirichletBC_complex64
      DirichletBC_float32
      DirichletBC_float64
      DofMap
      ElementDofLayout
      Expression_complex128
      Expression_complex64
      Expression_float32
      Expression_float64
      FiniteElement
      Form_complex128
      Form_complex64
      Form_float32
      Form_float64
      FunctionSpace
      Function_complex128
      Function_complex64
      Function_float32
      Function_float64
      IntegralType
   
   

   
   
   



