dolfinx/v0.7.3/python/_sources/generated/dolfinx.cpp.fem.rst.txt
dolfinx.cpp.fem
===============

.. automodule:: dolfinx.cpp.fem

   
   
   

   
   
   .. rubric:: Functions

   .. autosummary::
   
      apply_lifting
      assemble_matrix
      assemble_scalar
      assemble_vector
      build_dofmap
      compute_integration_domains
      create_dofmap
      create_element_dof_layout
      create_expression_complex128
      create_expression_complex64
      create_expression_float32
      create_expression_float64
      create_form_complex128
      create_form_complex64
      create_form_float32
      create_form_float64
      create_nonmatching_meshes_interpolation_data
      create_sparsity_pattern
      discrete_gradient
      insert_diagonal
      interpolation_coords
      locate_dofs_geometrical
      locate_dofs_topological
      pack_coefficients
      pack_constants
      set_bc
      transpose_dofmap
   
   

   
   
   .. rubric:: Classes

   .. autosummary::
   
      Constant_complex128
      Constant_complex64
      Constant_float32
      Constant_float64
      CoordinateElement_float32
      CoordinateElement_float64
      DirichletBC_complex128
      DirichletBC_complex64
      DirichletBC_float32
      DirichletBC_float64
      DofMap
      ElementDofLayout
      Expression_complex128
      Expression_complex64
      Expression_float32
      Expression_float64
      FiniteElement_float32
      FiniteElement_float64
      Form_complex128
      Form_complex64
      Form_float32
      Form_float64
      FunctionSpace_float32
      FunctionSpace_float64
      Function_complex128
      Function_complex64
      Function_float32
      Function_float64
      IntegralType
   
   

   
   
   



